--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 40px; 
+    margin-top: 40px;
     margin-bottom: 40px;
 }
 
@@ -58,4 +58,26 @@ ul, ol {
 
 .question {
     margin-bottom: 13px;
+}
+
+.rainbow {
+    animation: colorRotate 6s linear 0s infinite;
+}
+
+@keyframes colorRotate {
+    from {
+        color: #6666ff;
+    }
+    10% {
+        color: #0099ff;
+    }
+    50% {
+        color: #00ff00;
+    }
+    75% {
+        color: #ff3399;
+    }
+    100% {
+        color: #6666ff;
+    }
 }
